--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
+    <link rel="alternate icon" type="image/png" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Simple CV Builder</title>
 
     <!-- SEO Meta Tags -->
     <meta name="description"
